src/test/ui/issues/issue-7246.stderr
error: unreachable statement
  --> $DIR/issue-7246.rs:7:5
   |
LL |     if *ptr::null() {};
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-7246.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/issue-7246.rs:6:5
   |
LL |     return;
   |     ^^^^^^

error: aborting due to previous error

